--- a/Website.html
+++ b/Website.html
@@ -1,84 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrainyBucks</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
         * {
             font-family: 'Montserrat', sans-serif;
         }
-
-        .btn-primary {
-            background-color: #D5007F;
-            color: white;
-            border-radius: 8px;
+        /* Fuchsia Color Scheme */
+        .primary-bg {
+            background: linear-gradient(135deg, #3f4dc7, #a04be1)
         }
-
-        .btn-outline-primary {
-            background-color: transparent;
-            color: #D5007F;
-            border: 1px solid #D5007F;
-            border-radius: 8px;
+        .primary-text {
+            color: #9B4D96;
         }
-
-        .footer {
-            background-color: #3f4dc7;
+        .secondary-text {
+            color: #6B4C8D;
         }
-
-        .footer-text {
-            color: white;
-            font-family: Montserrat;
+        .btn-primary-custom {
+            background-color: #9B4D96;
+            border: none;
         }
-
-        .footer-text-light {
-            color: #9CA3AF;
-            font-family: Montserrat;
-        }
-
-        .heading {
-            font-family: Montserrat, sans-serif;
-            font-weight: bold;
-        }
-
-        .subheading {
-            font-family: Montserrat, sans-serif;
-            font-weight: normal;
-            font-size: 16px;
+        .btn-outline-primary-custom {
+            border-color: #9B4D96;
+            color: #9B4D96;
         }
     </style>
 </head>
 
 <body>
-    <!-- Fixed Header -->
-    <header class="header text-white py-3 fixed-top" style="background-color: #3f4dc7;">
-        <div class="container d-flex justify-content-start align-items-center">
-            <img src="logo.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
-            <h1 class="m-0 heading" style="font-size: 24px;">BrainyBucks</h1>
+    <!-- Fixed Header with Navbar -->
+    <header class="header primary-bg text-white py-3 fixed-top">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="logo.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
+                <h1 class="m-0">BrainyBucks</h1>
+            </div>
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-dark ">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Services</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
-
-    <!-- Navbar fixed below the header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" style="top: 70px;">
-        <div class="container">
-            <a class="navbar-brand" href="#">Finance Hub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <!-- Main Content Section -->
     <section class="container mt-5 pt-5 pb-5" style="padding-top: 100px; padding-bottom: 80px;">
@@ -86,15 +63,11 @@
             <!-- Left Content Section -->
             <div class="col-md-6 d-flex align-items-center">
                 <div>
-                    <h2 class="heading text-dark" style="font-size: 48px;">Empowering Your Financial Future</h2>
-                    <p class="subheading text-muted" style="font-size: 20px; line-height: 1.5;">Start Building Your Financial Future Today with Expert Guidance and Innovative Tools.</p>
-                    <div class="d-flex mt-4">
-                        <button class="btn btn-primary me-3" style="width: 182px; height: 58px;">Start Investing</button>
-                        <button class="btn btn-outline-primary" style="width: 158px; height: 58px;">Learn More</button>
-                    </div>
+                    <h2 class="primary-text font-weight-bold" style="font-size: 48px;">We simplify financial stuff</h2>
+                    <p class="secondary-text" style="font-size: 20px; line-height: 1.5;">DIY Financial plan (it’s not hard!)</p>
+                    <button class="btn btn-primary-custom mt-4" style="width: 182px; height: 58px; border-radius: 8px;">Contact us now</button>
                 </div>
             </div>
-
             <!-- Right Content Section (Image) -->
             <div class="col-md-6">
                 <img src="https://placehold.co/624x624" class="img-fluid" alt="Financial Image">
@@ -102,57 +75,87 @@
         </div>
     </section>
 
-    <!-- Content Area 2 -->
-    <div class="main-content" style="margin-top: 150px;">
-        <section class="bg-success text-white text-center py-5">
-            <h2 class="heading">Your Trusted Financial Partner</h2>
-        </section>
+ <!-- Content Area 2 -->
+ <!-- Content Area 2 -->
+<div class="main-content" style="margin-top: 150px;">
+    <section class="primary-bg text-white text-center py-5">
+        <h2 class="heading">Your Trusted Financial Partner</h2>
+    </section>
 
-        <div class="container my-5">
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <div class="card shadow-sm p-3">
-                        <h3 class="heading">Investment Advice</h3>
-                        <p class="subheading">Learn how we can help you invest smarter and achieve your financial goals.</p>
-                    </div>
+    <div class="container my-5">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <div class="card shadow-sm p-3 bg-light">
+                    <h3 class="heading primary-text">Investment Advice</h3>
+                    <p class="subheading secondary-text">Learn how we can help you invest smarter and achieve your financial goals.</p>
                 </div>
-                <div class="col-md-4">
-                    <div class="card shadow-sm p-3">
-                        <h3 class="heading">Financial Planning</h3>
-                        <p class="subheading">Plan your financial future with tailored advice and expert insights.</p>
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-sm p-3 bg-light">
+                    <h3 class="heading primary-text">Financial Planning</h3>
+                    <p class="subheading secondary-text">Plan your financial future with tailored advice and expert insights.</p>
                 </div>
-                <div class="col-md-4">
-                    <div class="card shadow-sm p-3">
-                        <h3 class="heading">Market Insights</h3>
-                        <p class="subheading">Stay updated with the latest market trends and make informed decisions.</p>
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-sm p-3 bg-light">
+                    <h3 class="heading primary-text">Market Insights</h3>
+                    <p class="subheading secondary-text">Stay updated with the latest market trends and make informed decisions.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+    
+ <!-- "What We Do" Section -->
+<section class="container mt-5">
+    <div class="text-center">
+        <h2 class="primary-text font-weight-bold mb-4" style="font-size: 36px;">What We Do</h2>
+        <p class="secondary-text lead mb-5" style="font-size: 18px;">Brainybucks consultants are qualified and experienced financial professionals who help you use your brain to help yourself.</p>
+    </div>
+
+    <div class="row text-center">
+        <div class="col-md-6 mb-4">
+            <div class="card shadow-sm p-4 border-0">
+                <div class="card-body">
+                    <h4 class="primary-text font-weight-bold" style="font-size: 24px;">1. Uncover Your Money Goals</h4>
+                    <p class="secondary-text" style="font-size: 16px;">Learn how to discover and define your financial goals, then take actionable steps to start investing in your life. We'll guide you through the process, making it simple and accessible.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card shadow-sm p-4 border-0">
+                <div class="card-body">
+                    <h4 class="primary-text font-weight-bold" style="font-size: 24px;">2. Understand the Financial World</h4>
+                    <p class="secondary-text" style="font-size: 16px;">We simplify how the financial world works, eliminating the jargon that often confuses people. With our guidance, you'll have the knowledge to make informed financial decisions for your future.</p>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="text-center mt-5">
+        <p class="secondary-text" style="font-size: 18px;">We demystify the financial jargon that often confuses and empower you to make informed decisions. Our approach helps you take control of your financial life.</p>
+    </div>
+</section>
+
     <!-- Footer Section -->
-    <footer class="footer text-white py-3">
+    <footer class="footer primary-bg text-white py-3">
         <div class="container d-flex justify-content-between">
             <div class="d-flex align-items-center">
                 <img src="logo.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
-                <span class="footer-text" style="font-size: 16px;">BrainyBucks</span>
+                <span style="color: white; font-size: 16px; padding-right: 30px;">BrainyBucks</span>
             </div>
             <div class="d-flex flex-column align-items-end">
-                <span class="footer-text" style="font-size: 14px;">Your trusted partner for financial success.</span>
-                <div class="d-flex">
-                    <span class="footer-text-light" style="font-size: 12px;">Investments | Banking | Insurance | Retirement</span>
-                </div>
+                <span style="color: white; font-size: 14px;">Your trusted partner for financial success.</span>
+                <span style="color: #9CA3AF; font-size: 12px;">Investments | Banking | Insurance | Retirement</span>
             </div>
         </div>
         <div class="container text-center mt-2">
-            <p class="footer-text-light" style="font-size: 14px;">© 2025 BrainyBucks. All rights reserved.</p>
+            <p style="color: #ffffff; font-size: 14px;">© 2025 BrainyBucks. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="pagesize.js"></script>  <!-- Test Script -->
 </body>
-
 </html>
