--- a/Website.html
+++ b/Website.html
@@ -37,7 +37,7 @@
     <header class="header primary-bg text-white py-3 fixed-top">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
-                <img src="logo.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
+                <img src="logo3.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
                 <h1 class="m-0">BrainyBucks</h1>
             </div>
             <!-- Navbar -->
@@ -143,7 +143,7 @@
     <footer class="footer primary-bg text-white py-3">
         <div class="container d-flex justify-content-between">
             <div class="d-flex align-items-center">
-                <img src="logo.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
+                <img src="logo3.png" alt="BrainyBucks Logo" class="logo me-3" style="width: 40px; height: 40px;">
                 <span style="color: white; font-size: 16px; padding-right: 30px;">BrainyBucks</span>
             </div>
             <div class="d-flex flex-column align-items-end">
