--- a/Website.html
+++ b/Website.html
@@ -57,6 +57,8 @@
         </div>
     </header>
 
+    
+
     <!-- Main Content Section -->
     <section class="container mt-5 pt-5 pb-5" style="padding-top: 100px; padding-bottom: 80px;">
         <div class="row">
@@ -74,8 +76,41 @@
             </div>
         </div>
     </section>
+<!-- Testimonial Section -->
+<div class="container py-5 position-relative">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10 p-4" style="border: 2px solid transparent; border-image: linear-gradient(135deg, #3f4dc7, #a04be1) 1; border-radius: 15px;">
+            <div class="row align-items-center">
+                <div class="col-md-9">
+                    <div class="row align-items-center">
+                        <div class="col-4 col-md-3 text-center">
+                            <img src="quote.svg" class="img-fluid" style="max-width: 80px; height: auto;" alt="Profile Image">
+                        </div>
+                        <div class="col-8 col-md-9">
+                            <p class="mt-3 fs-5">
+                                Most financial advice feels overwhelming and out of reach. I built BrainyBucks to give you clear, step-by-step guidance—so managing money feels doable, not stressful.
+                            </p>
+                            <h4 class="mt-4">Hae Chung</h4>
+                            <p class="fw-bold fs-6">Co-Founder</p>
+                        </div>
+                    </div>
+                </div>
 
- <!-- Content Area 2 -->
+                <!-- MEET HAE section inside the border for all screen sizes -->
+                <div class="col-12 col-md-3 d-flex justify-content-center align-items-center mt-4 mt-md-0">
+                    <div class="text-center">
+                        <img src="hae.jpeg" class="img-fluid mb-2" alt="Meet Image">
+                        <p class="fs-6 mb-0">MEET HAE</p>
+                        <!-- Gradient line under "MEET HAE" -->
+                        <div class="mx-auto" style="width: 120px; height: 4px; background: linear-gradient(135deg, #3f4dc7, #a04be1);"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
  <!-- Content Area 2 -->
 <div class="main-content" style="margin-top: 150px;">
     <section class="primary-bg text-white text-center py-5">
