--- a/Website.html
+++ b/Website.html
@@ -79,12 +79,13 @@
 <!-- Testimonial Section -->
 <div class="container py-5 position-relative">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-10 p-4" style="border: 2px solid transparent; border-image: linear-gradient(135deg, #3f4dc7, #a04be1) 1; border-radius: 15px;">
+        <div class="col-12 col-md-10 p-4" style="border: 2px solid #3f4dc7;">
             <div class="row align-items-center">
                 <div class="col-md-9">
                     <div class="row align-items-center">
                         <div class="col-4 col-md-3 text-center">
-                            <img src="quote.svg" class="img-fluid" style="max-width: 80px; height: auto;" alt="Profile Image">
+                            <img src="quote.svg" class="img-fluid" style="max-width: 80px; height: auto; filter: invert(40%) sepia(80%) saturate(5500%) hue-rotate(210deg) brightness(90%) contrast(90%);" alt="Profile Image">
+
                         </div>
                         <div class="col-8 col-md-9">
                             <p class="mt-3 fs-5">
@@ -102,7 +103,7 @@
                         <img src="hae.jpeg" class="img-fluid mb-2" alt="Meet Image">
                         <p class="fs-6 mb-0">MEET HAE</p>
                         <!-- Gradient line under "MEET HAE" -->
-                        <div class="mx-auto" style="width: 120px; height: 4px; background: linear-gradient(135deg, #3f4dc7, #a04be1);"></div>
+                        <div class="mx-auto" style="width: 120px; height: 4px; background-color: #3f4dc7;"></div>
                     </div>
                 </div>
             </div>
