--- a/Website.html
+++ b/Website.html
@@ -167,8 +167,13 @@ footer .wave#wave4 {
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <div style="background-color: #F0F0F0; color: #999999; font-size: 12px; font-weight: 400; text-align: center; display: flex; justify-content: center; align-items: center; width: 128px; height: 52px;">IMG<br>128×52</div>
+                    <div style="width: 128px; height: 52px; display: flex; justify-content: center; align-items: center;">
+                        <div style="width: 128px; height: 52px; display: flex; justify-content: center; align-items: center; position: relative;">
+                            <!-- Background Rectangle -->
+            
+                            <img src="assets/Logos/logomain.svg" width="140px" height="140px" alt="Logo" style="position: absolute; bottom: 50;"/>
+                        </div>
+                    </div>                        
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -295,13 +300,13 @@ footer .wave#wave4 {
 
     <footer class="bg-dark-brainybucks py-5">
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="position: absolute; bottom: 100%; width: 100%; height: 100px;">
+        <svg xmlns="assets/Logos/logomain.svg" viewBox="0 0 1440 320" style="position: absolute; bottom: 100%; width: 100%; height: 100px;">
             <path fill="#5B21B6" d="M0,128L30,144C60,160,120,192,180,186.7C240,181,300,139,360,128C420,117,480,139,540,160C600,181,660,203,720,213.3C780,224,840,224,900,213.3C960,203,1020,181,1080,160C1140,139,1200,117,1260,128C1320,139,1380,181,1410,202.7L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320H0Z"></path>
         </svg>
         <div class="container">
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4 mb-md-0">
-                    <img class="logo" src="assets/Logos/trash.png" alt="" style="max-width: 100px; margin: auto; display: block;"/>
+                    <img class="logo" src="assets/Logos/trash.png" alt="" style="max-width: 120px; margin: auto; display: block;"/>
                     <p class="text-white-50 mt-3">Helping you take control of your financial future.</p>
                 </div>
                 <div class="col mb-4 mb-md-0">
