--- a/Website.html
+++ b/Website.html
@@ -252,26 +252,31 @@ footer .wave#wave4 {
 
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">
-        <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;"  alt="Your Company Name Logo" height="30">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container"> <!-- Adds padding and centers content -->
+      <a class="navbar-brand" href="/">
+        <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;" alt="Your Company Name Logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      </button>
+      
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="What-we-do.html">What We Do</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="How-we-help.html">How We Help</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="What-we-do.html">What We Do</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="How-we-help.html">How We Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
         </ul>
-    </div>
-</nav>
+      </div>
+    </div> <!-- End container -->
+  </nav>
+  
 <section class="py-5" style="background-color: #F5F3FF;">
     <div class="container">
       <div class="row align-items-center">
@@ -285,8 +290,8 @@ footer .wave#wave4 {
   
         <!-- Right Side: Image -->
         <div class="col-lg-6 text-center position-relative">
-          <img src="assets/Logos/23.png" class="img-fluid shadow-lg" style="max-width: 250px; transform: rotate(-8deg); position: relative; z-index: 2;" alt="Guide Cover">
-          <img src="assets/guide-inner.png" class="img-fluid shadow" style="max-width: 250px; transform: rotate(8deg); position: absolute; top: 30px; left: 80px; z-index: 1;" alt="Guide Inner Page">
+          <img src="assets/Logos/Indicators of financial growth and success.svg" class="img-fluid shadow-lg" style="max-width: 250px; transform: rotate(-8deg); position: relative; z-index: 2;" alt="Guide Cover">
+          
         </div>
       </div>
     </div>
