Financial Hot Sauce --> Financial Sauce

--- a/Website.html
+++ b/Website.html
@@ -150,7 +150,7 @@
   
         <div class="container py-5">
             <h2 class="text-center text-primary-brainybucks mb-4">What We Do</h2>
-            <p class="lead text-center mb-5">Brainybucks consultants are qualified and experienced financial professionals who help you use your brain to help yourself.</p>
+            <p class="lead text-center mb-5">Brainybucks Consultants are qualified and experienced financial professionals who help you use your brain to help yourself.</p>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"> <!-- Changed to 3 columns -->
                 <div class="col">
                     <div class="feature-card h-100">
@@ -190,7 +190,7 @@
                              width="100" height="100" alt="Channel Icon">
                         
                         <!-- Channel Name -->
-                        <h5 class="mb-2">Financial Hot Sauce</h5>
+                        <h5 class="mb-2">Financial Sauce</h5>
                         
                         <!-- Subscribe Button -->
                         <div class="mb-3">
@@ -207,14 +207,14 @@
                     <!-- Video 1 -->
                     <div class="col-md-4">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/5hnXRxVI_lU" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/5hnXRxVI_lU" allowfullscreen autoplay="1"></iframe>
                         </div>
                     </div>
 
                     <!-- Video 2 -->
                     <div class="col-md-4">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/ayvYWfYKDUc" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/ayvYWfYKDUc" allowfullscreen autoplay="1"></iframe>
                         </div>
                     </div>
 
