--- a/Website.html
+++ b/Website.html
@@ -185,7 +185,7 @@
                         <h2 class="mb-4">Watch & Subscribe</h2>
 
                         <!-- Channel Icon -->
-                        <img src="assets/Logos/yt.jpg" 
+                        <img src="assets/Logos/youtube.jpg" 
                              class="rounded-circle mb-3" 
                              width="100" height="100" alt="Channel Icon">
                         
