--- a/Website.html
+++ b/Website.html
@@ -103,7 +103,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container"> <!-- Adds padding and centers content -->
       <a class="navbar-brand" href="/">
-        <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;" alt="Your Company Name Logo">
+        <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;" alt="Brainybucks Consultants Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +134,7 @@
           <h2 class="fw-bold" style="color: #6f42c1;">Financial Stuff Simplified!</h2>
           <h3 class="fw-semibold mb-3" style="color: #111;">DIY Financial Plan (it's not hard!)</h3>
 
-          <a href="#" class="btn-primary-brainybucks w-30 py-2" style="background: linear-gradient(135deg, #7C3AED, #a04be1); border-color: white;">Contact us now</a>
+          <a href="#" class="btn-primary-brainybucks w-30 py-2" style="background: linear-gradient(135deg, #7C3AED, #a04be1); border-color: white; border-radius: 30px;">Contact us now</a>
 
         </div>
   
