--- a/Website.html
+++ b/Website.html
@@ -185,7 +185,7 @@
                         <h2 class="mb-4">Watch & Subscribe</h2>
 
                         <!-- Channel Icon -->
-                        <img src="assets/Logos/youtube.jpg" 
+                        <img src="assets/Logos/yt.jpg" 
                              class="rounded-circle mb-3" 
                              width="100" height="100" alt="Channel Icon">
                         
@@ -207,14 +207,14 @@
                     <!-- Video 1 -->
                     <div class="col-md-4">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/ayvYWfYKDUc?si=F7LQjGvfDoRF2i0x" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/5hnXRxVI_lU" allowfullscreen></iframe>
                         </div>
                     </div>
 
                     <!-- Video 2 -->
                     <div class="col-md-4">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/5hnXRxVI_lU?si=Y6z0U9Q7wD6J2BjF" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/ayvYWfYKDUc" allowfullscreen></iframe>
                         </div>
                     </div>
 
