--- a/Website.html
+++ b/Website.html
@@ -140,7 +140,7 @@
   
         <!-- Right Side: Image -->
         <div class="col-lg-6 text-center position-relative">
-          <img src="assets/Logos/Indicators of financial growth and success.svg" class="img-fluid shadow-lg" style="max-width: 300px; transform: rotate(-8deg); position: relative; z-index: 2;" alt="Guide Cover">
+          <img src="assets/Logos/Indicators of financial growth and success.svg" class="img-fluid shadow-lg" style="max-width: 300px; transform: rotate(-8deg); position: relative; z-index: 2; border-radius: 20px;" alt="Guide Cover">
           
         </div>
       </div>
