What-We-Do Page Drafted

--- a/Website.html
+++ b/Website.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Adelle+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -301,7 +301,7 @@
             <a href="#" target="_blank">
                 <img src="assets/footer/twitter.svg" width="24" height="24" alt="Twitter">
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.youtube.com/@FinancialSauc" target="_blank">
                 <img src="assets/footer/youtube.svg" width="24" height="24" alt="YouTube">
             </a>
         </div>
