--- a/What-we-do.html
+++ b/What-we-do.html
@@ -104,7 +104,7 @@ body {
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container"> <!-- Adds padding and centers content -->
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/website">
         <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;" alt="Brainybucks Consultants Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
