--- a/What-we-do.html
+++ b/What-we-do.html
@@ -104,7 +104,7 @@ body {
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container"> <!-- Adds padding and centers content -->
-      <a class="navbar-brand" href="/website">
+      <a class="navbar-brand" href="Website.html">
         <img src="assets/Logos/blue.png" style="width: 110px; height: 81px;" alt="Brainybucks Consultants Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -121,7 +121,7 @@ body {
             <a class="nav-link" href="How-we-help.html">How We Help</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="Contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
