Applied several styling updates

--- a/What-we-do.html
+++ b/What-we-do.html
@@ -165,7 +165,7 @@ body {
                     </ul>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="assets/Logos/Indicators of financial growth and success.svg" alt="Financial consultation" class="w-full rounded-lg shadow-xl">
+                    <img src="assets/Logos/Whatwedo.svg" alt="Financial consultation" class="w-full rounded-lg shadow-xl">
                 </div>
             </div>
         </div>
@@ -215,11 +215,11 @@ body {
     </section>
 
     <!-- Good News Section -->
-    <section class="bg-gradient-to-r from-purple-50 to-purple-100 py-17 md:py-24">
+    <section class="py-17 md:py-24" style="background: linear-gradient(135deg, #7C3AED, #a04be1);">
         <div class="container mx-auto px-5">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-3xl font-bold text-black mb-8">But here's the good news:</h2>
-                <p class="text-black text-xl mb-12">
+                <h2 class="text-3xl font-bold text-white mb-8">But here's the good news:</h2>
+                <p class="text-white text-xl mb-12">
                     We've seen "ordinary" people build extraordinary lives. They chose wisely. You can too.
                 </p>
                 <div class="bg-white p-8 rounded-xl shadow-md text-center">
