--- a/Contact.html
+++ b/Contact.html
@@ -239,10 +239,10 @@ body {
     </section>
 
     <!-- CTA Section -->
-    <section class="bg-purple-600 py-16 px-5">
-        <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-white mb-8">Ready for a More Personal Touch?</h2>
-            <button class="bg-white text-purple-600 font-semibold py-3 px-6 rounded-lg hover:bg-gray-100 transition duration-200 inline-flex items-center">
+    <section class="bg-purple-600 py-20 px-8" style="background: linear-gradient(135deg, #7C3AED, #a04be1)">
+        <div class="max-w-5xl mx-auto text-center">
+            <h2 class="text-3xl font-bold text-white mb-10">Ready for a More Personal Touch?</h2>
+            <button class="bg-white text-purple-600 font-semibold py-3 px-6 rounded-lg hover:bg-gray-100 transition duration-200 inline-flex items-center text-lg">
                 <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
                 </svg>
@@ -250,7 +250,7 @@ body {
             </button>
         </div>
     </section>
-  
+
     
     <section class="Wave-container">  
     <div class="waves">
