--- a/chatbot-reactjs/index.html
+++ b/chatbot-reactjs/index.html
@@ -6,13 +6,15 @@
     <title>Brainybucks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/sections.css">
     <link rel="stylesheet" href="css/footer.css">
+    
     <style>
         /* Footer Waves */
 /* Ensure the waves overlap the section above */
@@ -97,9 +99,17 @@
     100% {
         background-position-x: -1000px;
     }
+
 }
-    </style>
+    </style> 
 </head>
+<body>
+    <div id="root" class="position-relative" style="z-index: 1050;">
+        <!-- React content will render here -->
+    </div>
+    <script type="module" src="/src/main.jsx"></script>
+</body>
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container"> <!-- Adds padding and centers content -->
       <a class="navbar-brand" href="/">
