--- a/Website.html
+++ b/Website.html
@@ -255,7 +255,7 @@
                     We demystify and simplify financial concepts so anyone can DIY their financial planning.
                 </p>
                 <ul class="small mb-3">
-                    <li>Serving clients aged 7 to 70 years old</li>
+                    <li>Serving clients aged 7 to 700 years old</li>
                     <li>Personalized guidance for your unique situation</li>
                 </ul>
                 <p class="small">
@@ -287,7 +287,7 @@
     <footer class="footer">
         <!-- Logo -->
         <div class="logo">
-            <img src="assets/Logos/logo2.png" alt="BrainyBucks Logo" style="max-width: 65px;">
+            <img id = "logo" src="assets/Logos/logo2.png" alt="BrainyBucks Logo" style="max-width: 65px;">
         </div>
 
         <!-- Social Links -->
