Minor Changes (Fixed ChatBot Popup)

--- a/events.html
+++ b/events.html
@@ -303,7 +303,7 @@
 </nav>
 
   <div class="container">
-    <h2 class="mb-4 text-center text-primary fw-bold">Upcoming Events</h2>
+    <h2 class="mb-4 text-center fw-bold" style="color: #6f42c1;">Upcoming Events</h2>
 
     <div class="mb-4 text-end" id="admin-signups-button-container" style="display: none;">
       <a href="admin-signups.html" class="btn btn-outline-primary">View All Signups</a>
