--- a/Contact.html
+++ b/Contact.html
@@ -302,14 +302,14 @@ body {
         <div class="max-w-4xl mx-auto bg-purple-50 rounded-xl p-8">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="mb-8 md:mb-0 md:mr-8">
-                    <img src="assets/Logos/Hae-Chung.jpg" alt="Hae Chung" class="w-48 h-48 rounded-full object-cover">
+                    <img src="assets/Logos/hae.jpg" alt="Hae Chung" class="w-48 h-48 rounded-full object-cover">
                 </div>
                 <div>
                     <blockquote class="text-lg italic text-gray-800 mb-6">
                         "We're not here to sell you stuff — we're here to help you build the financial life you want."
                     </blockquote>
                     <div>
-                        <p class="font-semibold text-purple-600">Marsoray Chen</p>
+                        <p class="font-semibold text-purple-600">Hae Chung</p>
                         <p class="text-gray-600">Financial Advisor</p>
                     </div>
                 </div>
