--- a/What-we-do.html
+++ b/What-we-do.html
@@ -310,25 +310,12 @@ body {
         </div>
     </section>
 
-    <!-- Good News Section -->
-    <section class="py-17 md:py-24" style="background: linear-gradient(135deg, #7C3AED, #a04be1);">
-        <div class="container mx-auto px-5">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-3xl font-bold text-white mb-8">But here's the good news:</h2>
-                <p class="text-white text-xl mb-12">
-                    We've seen "ordinary" people build extraordinary lives. They chose wisely. You can too.
-                </p>
-                <div class="bg-white p-8 rounded-xl shadow-md text-center">
-                    <p class="text-2xl font-bold text-gray-900">
-                        We all get the same 168 hours a week. What will you do with
-                        <br>
-                        <span class="text-purple-600">yours?</span>
-                    </p>
-                    <a href="#" class="btn-primary-brainybucks w-30 py-2" style="background: linear-gradient(135deg, #7C3AED, #a04be1); border-color: white; border-radius: 30px; text-decoration: none; color: white; display: inline-block; text-align: center; padding: 10px 20px;">
-                        Click here to Email us? Start here
-                    </a>
-                </div>
-            </div>
+    <!-- Good News Section (Centered & Styled) -->
+    <section class="bg-primary-brainybucks py-5">
+        <div class="container text-center text-white py-5">
+            <h2 class="display-6 fw-normal mb-3">Take Control of Your Financial Life!</h2>
+            <p class="lead fw-normal mb-4">Everyone has the same 168 hours in a week. Start your journey today!</p>
+            <a href="#" class="btn-primary-brainybucks" style="border-radius: 30px; padding: 10px 32px; text-decoration: none; color: white; display: inline-block;">Get Started Now</a>
         </div>
     </section>
 
