More Minor Changes

--- a/What-we-do.html
+++ b/What-we-do.html
@@ -261,7 +261,7 @@ body {
                     </ul>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="assets/Logos/Whatwedo.svg" alt="Financial consultation" class="w-full rounded-lg shadow-xl">
+                    <img src="assets/Logos/Whatwedo.svg" alt="Financial consultation" class="w-3/4 md:w-4/5 mx-auto rounded-md shadow-xl">
                 </div>
             </div>
         </div>
@@ -269,7 +269,7 @@ body {
 
     <!-- Reality Check Section -->
     <section class="bg-gray-50 py-16 md:py-24">
-        <div class="container mx-auto px-5">
+        <div class="container mx-auto px-5">s
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-3xl font-bold text-gray-900 mb-8">Let's be real:</h2>
                 <div class="bg-white p-8 rounded-xl shadow-md">
@@ -301,7 +301,7 @@ body {
                 <p class="text-gray-700 text-xl mb-12">
                     Brainybucks Consultants teach you how to think clearly, stay grounded, and take control of your financial life.
                 </p>
-                <div class="bg-blue-50 p-8 rounded-xl">
+                <div class="bg-gradient-to-r from-purple-50 to-purple-100 p-8 rounded-xl">
                     <p class="text-gray-700 text-lg">
                         Because life throws curveballs – job loss, grief, even homelessness. Why not prepare?
                     </p>
