Implemented a feature that hides upcoming events for those who not logged into their acct, added a feature they need to signup first to see the events

--- a/signup.html
+++ b/signup.html
@@ -74,8 +74,12 @@
       <div class="row align-items-center">
         <!-- Left Side: Logo -->
         <div class="col-md-5 logo-container">
-          <img src="assets/Logos/blue.png" alt="Brainybucks Consultants Logo" />
-        </div>
+          <a class="" href="/"> 
+            <img src="assets/Logos/blue.png" alt="Brainybucks Consultants Logo" />
+            </a>
+          </div>
+
+       
 
         <!-- Right Side: Signup Form -->
         <div class="col-md-7">
