--- a/login.html
+++ b/login.html
@@ -69,8 +69,10 @@
       <div class="row align-items-center">
         <!-- Left Side: Logo -->
         <div class="col-md-5 logo-container">
-          <img src="assets/Logos/blue.png" alt="BrainyBucks Logo" />
-        </div>
+          <a class="" href="/"> 
+            <img src="assets/Logos/blue.png" alt="Brainybucks Consultants Logo" />
+            </a>
+          </div>
 
         <!-- Right Side: Login Form -->
         <div class="col-md-7">
