--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,11 @@
   <!-- Bootstrap & Quicksand Font -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+  
 
   <style>
     body {
@@ -65,8 +70,10 @@
       <div class="row align-items-center">
         <!-- Left Side: Logo -->
         <div class="col-md-5 logo-container">
-          <img src="assets/Logos/blue.png" alt="BrainyBucks Logo" />
-        </div>
+          <a class="" href="/"> 
+            <img src="assets/Logos/blue.png" alt="Brainybucks Consultants Logo" />
+            </a>
+          </div>
 
         <!-- Right Side: User Info -->
         <div class="col-md-7">
