--- a/What-we-do.html
+++ b/What-we-do.html
@@ -307,7 +307,7 @@
 
     <!-- Reality Check Section -->
     <section class="bg-gray-50 py-16 md:py-24">
-        <div class="container mx-auto px-5">s
+        <div class="container mx-auto px-5">
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-3xl font-bold text-gray-900 mb-8">Let's be real:</h2>
                 <div class="bg-white p-8 rounded-xl shadow-md">
