--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                 <li>
                     <h2>Quick Links</h2>
                 </li>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">How BrainyBucks Helps</a></li>
+                <li><a href="What-we-do.html">What We Do</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="#">Step-by-Step Financial Guide</a></li>
             </ul>
             <ul>
