--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
 
 </style>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V8L73YJ6YG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V8L73YJ6YG');
+</script>
+
 </head>
 <body>
     <div id="root" class="position-relative" style="z-index: 1050;">
