Files Changed: admin-events.html, admin-login.html, admin-signups.html, Contact.html, events.html, index.html, login.html, profile.html,signup.html, thankyou.html | Changed Instances of BrainyBucks to Brainybucks

--- a/Contact.html
+++ b/Contact.html
@@ -492,7 +492,7 @@
     <footer class="footer">
         <!-- Logo -->
         <div class="logo">
-            <img src="assets/Logos/logo2.png" alt="BrainyBucks Logo" style="max-width: 65px;">
+            <img src="assets/Logos/logo2.png" alt="Brainybucks Logo" style="max-width: 65px;">
         </div>
 
         <!-- Social Links -->
@@ -520,7 +520,7 @@
                     <h2>Quick Links</h2>
                 </li>
                 <li><a href="#">What We Do</a></li>
-                <li><a href="#">How BrainyBucks Helps</a></li>
+                <li><a href="#">How Brainybucks Helps</a></li>
                 <li><a href="#">Step-by-Step Financial Guide</a></li>
             </ul>
             <ul>
@@ -568,7 +568,7 @@
       
           try {
             await sendContactEmail({ name, email });
-            alert("✅ Thank you for contacting BrainyBucks! We’ve sent you a confirmation email.");
+            alert("✅ Thank you for contacting Brainybucks! We’ve sent you a confirmation email.");
             this.reset();
           } catch (error) {
             console.error("❌ Error sending confirmation email:", error);
