--- a/admin-login.html
+++ b/admin-login.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrainyBucks Login</title>
+  <title>Brainybucks Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module" src="/src/main.jsx"></script>
 </head>
 <body class="bg-gradient-to-b from-sky-100 to-white min-h-screen flex items-center justify-center">
   <!-- Logo and Title -->
   <div class="absolute top-4 left-4">
-    <span class="font-semibold text-lg text-gray-800">BrainyBucks Consultants</span>
+    <span class="font-semibold text-lg text-gray-800">Brainybucks Consultants</span>
   </div>
 
   <!-- Login Container -->
   <div class="bg-gradient-to-t from-sky-100 to-white bg-opacity-90 rounded-3xl shadow-xl p-8 w-full max-w-sm text-center">
     <!-- Logo -->
     <div class="w-12 h-12 mx-auto mb-4 flex items-center justify-center bg-gray-100 rounded-xl shadow">
-      <img src="assets/Logos/logo.png" alt="BrainyBucks Logo" class="w-8 h-8" />
+      <img src="assets/Logos/logo.png" alt="Brainybucks Logo" class="w-8 h-8" />
     </div>
-    <h2 class="text-xl font-semibold mb-2 text-gray-800">Sign in to BrainyBucks</h2>
+    <h2 class="text-xl font-semibold mb-2 text-gray-800">Sign in to Brainybucks</h2>
     <p class="text-sm text-gray-500 mb-6">Access your account to manage the website.</p>
 
     <form action="/admin-dashboard" method="POST" class="space-y-4">
