--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Events – BrainyBucks</title>
+  <title>Events – Brainybucks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
@@ -675,7 +675,7 @@
 <footer class="footer">
   <!-- Logo -->
   <div class="logo">
-      <img id = "logo" src="assets/Logos/logo2.png" alt="BrainyBucks Logo" style="max-width: 65px;">
+      <img id = "logo" src="assets/Logos/logo2.png" alt="Brainybucks Logo" style="max-width: 65px;">
   </div>
 
   <!-- Social Links -->
@@ -703,7 +703,7 @@
               <h2>Quick Links</h2>
           </li>
           <li><a href="#">What We Do</a></li>
-          <li><a href="#">How BrainyBucks Helps</a></li>
+          <li><a href="#">How Brainybucks Helps</a></li>
           <li><a href="#">Step-by-Step Financial Guide</a></li>
       </ul>
       <ul>
