--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     <footer class="footer">
         <!-- Logo -->
         <div class="logo">
-            <img id = "logo" src="assets/Logos/logo2.png" alt="BrainyBucks Logo" style="max-width: 65px;">
+            <img id = "logo" src="assets/Logos/logo2.png" alt="Brainybucks Logo" style="max-width: 65px;">
         </div>
 
         <!-- Social Links -->
