--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Login – BrainyBucks</title>
+  <title>Login – Brainybucks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Bootstrap & Font -->
@@ -83,7 +83,7 @@
 
         <!-- Right Side: Login Form -->
         <div class="col-md-7">
-          <h2>Login to BrainyBucks</h2>
+          <h2>Login to Brainybucks</h2>
 
           <form id="login-form">
             <input type="email" id="login-email" class="form-control" placeholder="Email" required />
