--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign Up – BrainyBucks</title>
+  <title>Sign Up – Brainybucks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Bootstrap & Font -->
@@ -88,7 +88,7 @@
 
         <!-- Right Side: Signup Form -->
         <div class="col-md-7">
-          <h2>Create Your BrainyBucks Account</h2>
+          <h2>Create Your Brainybucks Account</h2>
 
           <form id="signup-form">
             <input type="text" id="name" class="form-control" placeholder="Full Name" required />
