--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Thank You – BrainyBucks</title>
+  <title>Thank You – Brainybucks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Bootstrap & Font -->
@@ -61,9 +61,9 @@
   <div class="d-flex align-items-center justify-content-center min-vh-100">
     <div class="thankyou-box">
       <div class="logo-container">
-        <img src="assets/Logos/blue.png" alt="BrainyBucks Logo">
+        <img src="assets/Logos/blue.png" alt="Brainybucks Logo">
       </div>
-      <h2>🎉 Thank you for creating your account with BrainyBucks!</h2>
+      <h2>🎉 Thank you for creating your account with Brainybucks Consultants!</h2>
       <p>You can now log in to access your profile.</p>
       <button onclick="window.location.href='login.html'" class="btn btn-brainybucks">Go to Login</button>
     </div>
